# Property-sorter

./: README.md  requirements.txt  setup.cfg
src/: sorter.py
src/sorter/: sorter.py
test/: test_sorter.py
