[metadata]
name = Haff
version = 0.0.1
author = Haffi Mazhar
author_email = haffi.mazhar@aol.co.uk
description = A small project to help visualize info from a csv dataset about properties in an area of UK.
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src